# fdtd

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CITATION.cff  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  README.md  bash_history.txt  benchmark.py  dipolo_mur.json  docker-compose.yml  generar_casos.py  get_commit_info.cmake  nuevo_intento.py  patron_radiacion.py  pytest.ini  python_history.txt  requirements.txt  set_precompiled_libraries.cmake  setup_intel_build.sh  write_git_info.sh
.devcontainer/: Dockerfile  devcontainer.json  notes.md
.ssh/: config
build2/: CMakeCache.txt  Makefile  cmake_install.cmake
build3/: CMakeCache.txt  Makefile  cmake_install.cmake
build_test/: CMakeCache.txt
doc/: Makefile  architecture.md  cli-reference.md  conf.py  contributing.md  developer-guide.md  development.md  docker.md  fdtdjson.md  getting-started.md  index.md  make.bat  mtln.md  outputs.md  project-overview.md  reference.md  requirements.txt  running-simulations.md  smbjson.md  solver-topics.md  testing.md  user-guide.md
scripts/: build-intel.sh  install-intel.sh  install-packages.sh
src_caseMaker/: caseMaker.py
src_conformal/: CMakeLists.txt  (+5 more)
src_json_parser/: CMakeLists.txt  cell_map.F90  cells.F90  conformal_region.F90  conformal_types.F90  geometry.F90  idchildtable.F90  labels_mod.F90  mesh.F90  nfdetypes_extension.F90  parser_tools.F90  smbjson.F90  smbjson_labels.F90
src_mtln/: CMakeLists.txt  circuit.F90  dispersive.F90  generators.F90  mtl.F90  mtl_bundle.F90  mtln_solver.F90  mtln_types.F90  multipolar_expansion.F90  network.F90  network_manager.F90  ngspice_interface.F90  ngspice_interface.c  preprocess.F90  probes.F90  rational_approximation.F90  utils.F90
src_mtln/interface/: CMakeLists.txt  ngspice_interface.c  ngspice_interface.h
src_output/: CMakeLists.txt  bulkProbeOutput.F90  bulk_probe_output.F90  domain.F90  farFieldProbeOutput.F90  frequencySliceProbeOutput.F90  mapVTKOutput.F90  movieProbeOutput.F90  output.F90  outputTypes.F90  outputUpdater.F90  outputUtils.F90  pointProbeOutput.F90  point_probe_output.F90  volumicProbeOutput.F90  volumicProbeUtils.F90  volumic_probe_output.F90  vtkAPI.F90  wireProbeOutput.F90  wire_charge_probe_output.F90  wire_current_probe_output.F90  xdmfAPI.F90
test/: CMakeLists.txt  fdtd_tests.cpp
test/conformal/: CMakeLists.txt  conformal_tests.cpp  conformal_tests.h  test_cell_map.F90  test_fhash.F90  test_filling.F90  test_geometry.F90  test_pec_volume.F90
test/hdf/: CMakeLists.txt  hdf_tests.cpp  hdf_tests.h  test_hdf.F90
test/mor/: CMakeLists.txt  mor_tests.cpp  mor_tests.h  test_evolution_operator.F90
test/mtln/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  mtln_testingTools.F90  mtln_tests.h  test_Paul.F90  test_dispersive.F90  test_fhash.F90  test_math.F90  test_mtl.F90  test_mtl_bundle.F90  test_mtln_types.F90  test_multipolar_expansion.F90  test_preprocess.F90  test_probes.F90  test_spice.F90  test_spice_connectors.F90  test_wirePanel.F90
test/observation/: CMakeLists.txt  observation_testingTools.F90  observation_tests.cpp  observation_tests.h  test_observation.F90  test_observation_init.F90  test_observation_update.F90  test_preprocess.F90
test/output/: CMakeLists.txt  output_tests.cpp  output_tests.h  test_output.F90  test_output_utils.F90  test_volumic_utils.F90  test_vtkAPI.F90  test_xdmfAPI.F90  vtkAPI_tests.cpp  vtkAPI_tests.h  xdmfAPI_tests.cpp  xdmfAPI_tests.h
test/preprocess/: CMakeLists.txt  preprocess_tests.cpp  preprocess_tests.h  test_check_animated_tags.F90  test_check_dielectric_tags.F90  test_check_lossy_tags.F90  test_searchtag.F90
test/pyWrapper/: test_full_system.py  test_integration.py  test_mtln_standalone.py  test_output_module_equivalence.py  test_output_module_regression.py  test_pyWrapper.py  test_script.py  utils.py
test/rotate/: CMakeLists.txt  rotate_testingTools.F90  rotate_tests.cpp  rotate_tests.h  test_nfde_rotate.F90  test_rotate.F90  test_rotate_generateAnisotropic.F90  test_rotate_generateBloqueProbes.F90  test_rotate_generateBoxSources.F90  test_rotate_generateCurrentFieldSources.F90  test_rotate_generateFDMs.F90  test_rotate_generateFronteras.F90  test_rotate_generateLossyThinSurface.F90  test_rotate_generateMasSondas.F90  test_rotate_generateNONMetals.F90  test_rotate_generatePECs.F90  test_rotate_generatePMCs.F90  test_rotate_generatePlaneWaves.F90  test_rotate_generateSONDAs.F90  test_rotate_generateSlantedWires.F90  test_rotate_generateSpaceSteps.F90  test_rotate_generateThinSlots.F90  test_rotate_generateThinWires.F90  test_rotate_generateVolumicProbes.F90  test_rotate_mtln.F90
test/semba_fdtd/: CMakeLists.txt  semba_fdtd_tests.cpp  semba_fdtd_tests.h  test_nfde2sgg.F90
test/smbjson/: CMakeLists.txt  smbjson_testingTools.F90  smbjson_tests.h  test_cells.F90  test_evolution_operator.F90  test_fhash.F90  test_geometry.F90  test_idchildtable.F90  test_mesh.F90  test_parser.F90  test_read_airplane.F90  test_read_background.F90  test_read_connectedWires.F90  test_read_currentInjection.F90  test_read_currentinjection.F90  test_read_dielectricSlab.F90  test_read_dielectricslab.F90  test_read_holland1981.F90  test_read_holland1981_mtl.F90  test_read_holland1981_short.F90  test_read_holland1981_unshielded.F90  test_read_large_airplane_mtln.F90  test_read_lumped_fixture.F90  test_read_mtln.F90  test_read_mtln_no_mtln_compilation.F90  test_read_nodal_source_resistance.F90  test_read_planewave.F90  test_read_sgbc.F90  test_read_shieldedPair.F90  test_read_sphere.F90  test_read_thinSlot.F90  test_read_towelHanger.F90  test_read_unshielded_multiwires_multipolar_expansion.F90  test_triangles.F90  test_unrecognized_key.F90
test/system/: CMakeLists.txt  init_solver.fdtd.json  system_testingTools.F90  system_tests.h  test_init_solver.F90  test_json_to_solver_input_shielded_pair.F90
test/utils/: CMakeLists.txt  array_assertion_tools.F90  assertion_tools.F90  fdetypes_tools.F90  sgg_setters.F90
test/vtk/: CMakeLists.txt  test_init_vtk.F90  test_vtk.F90  vtk_tests.cpp  vtk_tests.h
(+544 files in other folders)
